[package]
name = "daniengine"
version = "0.1.0"
edition = "2024"

[lib]
name = "daniengine"
path = "src/lib.rs"

[features]
default = []
render-pixels = ["dep:pixels", "dep:env_logger"]

[dependencies]
log = "0.4"
anyhow = "1.0"
pixels = { version = "0.13", optional = true }
winit = { version = "0.28" }
env_logger = { version = "0.11", optional = true }
bitflags = "2"
